8356308: Assert with -Xlog:class+path when classpath has an empty element